@@ -1,6 +1,7 @@
 Revision history for Test-Harness
 
 3.15
+        - Refactor getter/setter generation into TAP::Object.
         - The App::Prove::State::Result::Test now stores the parser object.
         - After discussion with Andy, agreed to clean up the test output
           somewhat.  t/foo.....ok becomes t/foo.t ... ok
